# rmate-server-app

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  index.html  package-lock.json  package.json
icons/: icon.icns
src/: main.js  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
