[package]
name = "rmate-zed-server"
version = "0.0.2"
description = "A RMate Tray Server"
authors = ["andremacola"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"


[dependencies]
tokio = { version = "1.43.0", features = ["time"] }
tray-icon = "0.10.0"
winit = "0.29.10"
env_logger = "0.10.0"
image = "0.24.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
