[package]
name = "rmate-zed-server"
version = "0.0.2"
description = "A RMate Tray Server"
authors = ["andremacola"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tokio = { version = "1.43.0", features = ["time"] }
tauri = { version = "1.5.0", features = [
    "system-tray",
    "dialog",
    "icon-png",
    "icon-ico",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
